Rename all occurrences of `master` to `main` where it references our own repositories

--- a/.outdated/.travis.yml
+++ b/.outdated/.travis.yml
@@ -13,7 +13,7 @@ jobs:
   allow_failures:
     - julia: nightly
   include:
-    - if: type = push AND branch = master
+    - if: type = push AND branch = main
       julia: 1
       os: osx
     # - stage: "Documentation"
@@ -51,7 +51,7 @@ codecov: true
 # avoid duplicate tests in PRs
 branches:
   only:
-    - master
+    - main
     - dev
 
 # we could use groups to trigger multiple builds in parallel to speed-up running expensive tests
